[gd_scene load_steps=3 format=3 uid="uid://csq3w1g5yh0kj"]

[ext_resource type="Script" path="res://components/door/door.gd" id="1_qo15l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r08e4"]
size = Vector2(166, 286)

[node name="Door" type="Area2D"]
script = ExtResource("1_qo15l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r08e4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DoorEnterButton" type="Button" parent="CanvasLayer"]
offset_left = 481.0
offset_top = 477.0
offset_right = 651.0
offset_bottom = 553.0
theme_override_font_sizes/font_size = 24

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="CanvasLayer/DoorEnterButton" to="." method="_on_door_enter_button_pressed"]
